# Bemba_logistica

./: .env.example  .gitignore  README.md  package-lock.json  package.json  pyproject.toml  requirements.txt
accounts/: admin.py  forms.py  models.py  urls.py  views.py
accounts/migrations/: 0001_initial.py  0002_initial.py
config/: settings.py  urls.py
gemba/: admin.py  apps.py  forms.py  mixins.py  models.py  reports.py  urls.py  views.py
gemba/management/commands/: seed_demo.py
gemba/migrations/: 0001_initial.py  0002_seed_areas.py
gemba/tests/: test_questions.py  test_reports.py
static/js/: camera.js
static_src/src/: styles.css
templates/: base.html
templates/accounts/: login.html
templates/gemba/: question_form.html  questions_list.html  reports_dashboard.html  walk_detail.html  walk_history.html  walk_today.html
templates/gemba/partials/: _answer_card.html
templates/icons/: _camera.html  _chart_bar.html  _check_circle.html  _chevron_left.html  _chevron_right.html  _clipboard.html  _clock.html  _exclamation_triangle.html  _home.html  _list_bullet.html  _logout.html  _pencil.html  _plus.html  _retake.html  _trash.html  _user_circle.html  _x_circle.html
