[project]
name = "caminata-logistica"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django>=6.0.7",
    "django-cloudinary-storage>=0.3.0",
    "django-environ>=0.14.0",
    "gunicorn>=26.0.0",
    "pillow>=12.3.0",
    "psycopg[binary]>=3.3.4",
    "whitenoise>=6.12.0",
]
